Periodic updates of the bank.

--- a/All.bib
+++ b/All.bib
@@ -307,6 +307,29 @@
   mrreviewer	= {A. Kufner}
 }
 
+@Book{		  adler.taylor.ea:07:applications,
+  title		= {Applications of random fields and geometry: Foundations
+		  and case studies},
+  author	= {Adler, Robert J and Taylor, Jonathan E and Worsley, Keith
+		  J and Worsley, Keith},
+  booktitle	= {In preparation, available on R. Adler’s home},
+  year		= {2007},
+  organization	= {Citeseer}
+}
+
+@Book{		  adler.taylor:07:random,
+  author	= {Adler, Robert J. and Taylor, Jonathan E.},
+  title		= {Random fields and geometry},
+  series	= {Springer Monographs in Mathematics},
+  publisher	= {Springer, New York},
+  year		= {2007},
+  pages		= {xviii+448},
+  isbn		= {978-0-387-48112-8},
+  mrclass	= {60G60 (58J65)},
+  mrnumber	= {2319516},
+  mrreviewer	= {Jos\'{e} Rafael Le\'{o}n}
+}
+
 @InCollection{	  adler:11:spectral,
   author	= {Adler, Mark},
   title		= {Spectral statistics of orthogonal and symplectic
@@ -5251,6 +5274,42 @@
   url		= {https://doi.org/10.1016/S0304-4149(98)00034-9}
 }
 
+@Article{	  berman:85:asymptotic,
+  author	= {Berman, Simeon M.},
+  title		= {An asymptotic bound for the tail of the distribution of
+		  the maximum of a {G}aussian process},
+  journal	= {Ann. Inst. H. Poincar\'{e} Probab. Statist.},
+  fjournal	= {Annales de l'Institut Henri Poincar\'{e}. Probabilit\'{e}s
+		  et Statistique},
+  volume	= {21},
+  year		= {1985},
+  number	= {1},
+  pages		= {47--57},
+  issn		= {0246-0203},
+  mrclass	= {60G15 (60G17)},
+  mrnumber	= {791269},
+  mrreviewer	= {T. Hida},
+  url		= {http://www.numdam.org/item?id=AIHPB_1985__21_1_47_0}
+}
+
+@Article{	  berman:85:asymptotic*1,
+  author	= {Berman, Simeon M.},
+  title		= {An asymptotic formula for the distribution of the maximum
+		  of a {G}aussian process with stationary increments},
+  journal	= {J. Appl. Probab.},
+  fjournal	= {Journal of Applied Probability},
+  volume	= {22},
+  year		= {1985},
+  number	= {2},
+  pages		= {454--460},
+  issn		= {0021-9002},
+  mrclass	= {60G15},
+  mrnumber	= {789369},
+  mrreviewer	= {P. Laurie Davies},
+  doi		= {10.2307/3213789},
+  url		= {https://doi.org/10.2307/3213789}
+}
+
 @Article{	  bernard.nualart:90:regularite,
   author	= {Bernard, Pierre and Nualart, David},
   title		= {R\'{e}gularit\'{e} {$C^infty$} des noyaux de {W}iener
@@ -8841,22 +8900,6 @@
 
 @Article{	  carmona.nualart:88:random,
   author	= {Carmona, Ren\'{e} and Nualart, David},
-  title		= {Random nonlinear wave equations: propagation of
-		  singularities},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {16},
-  year		= {1988},
-  number	= {2},
-  pages		= {730--751},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35L05 35R60)},
-  mrnumber	= {929075},
-  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
-}
-
-@Article{	  carmona.nualart:88:random*1,
-  author	= {Carmona, Ren\'{e} and Nualart, David},
   title		= {Random nonlinear wave equations: smoothness of the
 		  solutions},
   journal	= {Probab. Theory Related Fields},
@@ -8871,6 +8914,22 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00318783},
   url		= {https://doi.org/10.1007/BF00318783}
+}
+
+@Article{	  carmona.nualart:88:random*1,
+  author	= {Carmona, Ren\'{e} and Nualart, David},
+  title		= {Random nonlinear wave equations: propagation of
+		  singularities},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {2},
+  pages		= {730--751},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {929075},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 
 @Book{		  carmona.nualart:90:nonlinear,
@@ -12906,17 +12965,6 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -12932,6 +12980,17 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -16099,23 +16158,6 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -16131,6 +16173,23 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -24857,6 +24916,17 @@
   mrreviewer	= {Fred Espen Benth},
   doi		= {10.1214/aop/1022677386},
   url		= {https://doi.org/10.1214/aop/1022677386}
+}
+
+@Book{		  hahn.ozisik:12:heat,
+  title		= {Heat Conduction},
+  author	= {Hahn, David W. and {\"O}zisik, M.~Necati},
+  isbn		= {9781118330111},
+  lccn		= {2011052322},
+  url		= {https://books.google.com/books?id=C9qwb9Vymy8C},
+  year		= {2012},
+  edition	= {3rd},
+  publisher	= {Wiley}
 }
 
 @Article{	  hairer.hutzenthaler.ea:15:loss,
@@ -34120,6 +34190,21 @@
   mrnumber	= {0242449}
 }
 
+@Article{	  landau.shepp:70:on,
+  author	= {Landau, H. J. and Shepp, L. A.},
+  title		= {On the supremum of a {G}aussian process},
+  journal	= {Sankhy\={a} Ser. A},
+  fjournal	= {Sankhy\={a} (Statistics). The Indian Journal of
+		  Statistics. Series A},
+  volume	= {32},
+  year		= {1970},
+  pages		= {369--378},
+  issn		= {0581-572X},
+  mrclass	= {60.40},
+  mrnumber	= {286167},
+  mrreviewer	= {Radu Theodorescu}
+}
+
 @Article{	  landim.quastel.ea:04:superdiffusivity,
   author	= {Landim, C. and Quastel, J. and Salmhofer, M. and Yau,
 		  H.-T.},
@@ -38447,6 +38532,17 @@
   mrreviewer	= {Brad Safnuk}
 }
 
+@Book{		  morse.feshbach:53:methods,
+  author	= {Morse, Philip M. and Feshbach, Herman},
+  title		= {Methods of theoretical physics. 2 volumes},
+  publisher	= {McGraw-Hill Book Co., Inc., New York-Toronto-London},
+  year		= {1953},
+  pages		= {xxii+pp. 1--997 + xl; xviii+pp. 999--1978},
+  mrclass	= {79.0X},
+  mrnumber	= {0059774},
+  mrreviewer	= {M. Pinl}
+}
+
 @Article{	  motoo:58:proof,
   author	= {Motoo, Minoru},
   title		= {Proof of the law of iterated logarithm through diffusion
@@ -40689,6 +40785,25 @@
   url		= {https://doi.org/10.1016/j.jmva.2011.02.001}
 }
 
+@Article{	  norros.valkeila.ea:99:elementary,
+  author	= {Norros, Ilkka and Valkeila, Esko and Virtamo, Jorma},
+  title		= {An elementary approach to a {G}irsanov formula and other
+		  analytical results on fractional {B}rownian motions},
+  journal	= {Bernoulli},
+  fjournal	= {Bernoulli. Official Journal of the Bernoulli Society for
+		  Mathematical Statistics and Probability},
+  volume	= {5},
+  year		= {1999},
+  number	= {4},
+  pages		= {571--587},
+  issn		= {1350-7265},
+  mrclass	= {60G15 (60G30 60H99)},
+  mrnumber	= {1704556},
+  mrreviewer	= {Laurent Decreusefond},
+  doi		= {10.2307/3318691},
+  url		= {https://doi.org/10.2307/3318691}
+}
+
 @Article{	  nourdin.nualart.ea:10:central,
   author	= {Nourdin, Ivan and Nualart, David and Tudor, Ciprian A.},
   title		= {Central and non-central limit theorems for weighted power
@@ -41128,23 +41243,6 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -41159,6 +41257,23 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -50011,6 +50126,21 @@
   mrclass	= {30-01},
   mrnumber	= {1976398},
   mrreviewer	= {Heinrich Begehr}
+}
+
+@Book{		  stein.shakarchi:03:fourier,
+  author	= {Stein, Elias M. and Shakarchi, Rami},
+  title		= {Fourier analysis},
+  series	= {Princeton Lectures in Analysis},
+  volume	= {1},
+  note		= {An introduction},
+  publisher	= {Princeton University Press, Princeton, NJ},
+  year		= {2003},
+  pages		= {xvi+311},
+  isbn		= {0-691-11384-X},
+  mrclass	= {42-01},
+  mrnumber	= {1970295},
+  mrreviewer	= {Steven George Krantz}
 }
 
 @Book{		  stein.weiss:71:introduction,
