--- a/All.bib
+++ b/All.bib
@@ -6911,19 +6911,7 @@
   url		= {https://doi.org/10.1007/s11040-021-09380-8}
 }
 
-@InCollection{	  borodin.corwin:14:macdonald,
-  author	= {Borodin, A. and Corwin, I.},
-  title		= {Macdonald processes},
-  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
-		  {P}hysics},
-  pages		= {292--316},
-  publisher	= {World Sci. Publ., Hackensack, NJ},
-  year		= {2014},
-  mrclass	= {60K35 (60B99 82B23 82C22)},
-  mrnumber	= {3204480}
-}
-
-@Article{	  borodin.corwin:14:macdonald*1,
+@Article{	  borodin.corwin:14:macdonald,
   author	= {Borodin, Alexei and Corwin, Ivan},
   title		= {Macdonald processes},
   journal	= {Probab. Theory Related Fields},
@@ -6938,6 +6926,18 @@
   mrreviewer	= {Rongfeng Sun},
   doi		= {10.1007/s00440-013-0482-3},
   url		= {https://doi.org/10.1007/s00440-013-0482-3}
+}
+
+@InCollection{	  borodin.corwin:14:macdonald*1,
+  author	= {Borodin, A. and Corwin, I.},
+  title		= {Macdonald processes},
+  booktitle	= {X{VII}th {I}nternational {C}ongress on {M}athematical
+		  {P}hysics},
+  pages		= {292--316},
+  publisher	= {World Sci. Publ., Hackensack, NJ},
+  year		= {2014},
+  mrclass	= {60K35 (60B99 82B23 82C22)},
+  mrnumber	= {3204480}
 }
 
 @Article{	  borodin.corwin:14:moments,
@@ -8391,7 +8391,22 @@
   url		= {https://doi.org/10.2307/2154895}
 }
 
-@Article{	  cairoli.dalang:95:optimal,
+@InCollection{	  cairoli.dalang:95:optimal,
+  author	= {Cairoli, R. and Dalang, Robert C.},
+  title		= {Optimal switching between two {B}rownian motions},
+  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
+  series	= {Proc. Sympos. Pure Math.},
+  volume	= {57},
+  pages		= {53--63},
+  publisher	= {Amer. Math. Soc., Providence, RI},
+  year		= {1995},
+  mrclass	= {60G40 (60J65)},
+  mrnumber	= {1335462},
+  doi		= {10.1090/pspum/057/1335462},
+  url		= {https://doi.org/10.1090/pspum/057/1335462}
+}
+
+@Article{	  cairoli.dalang:95:optimal*1,
   author	= {Cairoli, R. and Dalang, Robert C.},
   title		= {Optimal switching between two random walks},
   journal	= {Ann. Probab.},
@@ -8405,21 +8420,6 @@
   mrnumber	= {1379177},
   mrreviewer	= {H.-J. Engelbert},
   url		= {http://links.jstor.org/sici?sici=0091-1798(199510)23:4<1982:OSBTRW>2.0.CO;2-P&origin=MSN}
-}
-
-@InCollection{	  cairoli.dalang:95:optimal*1,
-  author	= {Cairoli, R. and Dalang, Robert C.},
-  title		= {Optimal switching between two {B}rownian motions},
-  booktitle	= {Stochastic analysis ({I}thaca, {NY}, 1993)},
-  series	= {Proc. Sympos. Pure Math.},
-  volume	= {57},
-  pages		= {53--63},
-  publisher	= {Amer. Math. Soc., Providence, RI},
-  year		= {1995},
-  mrclass	= {60G40 (60J65)},
-  mrnumber	= {1335462},
-  doi		= {10.1090/pspum/057/1335462},
-  url		= {https://doi.org/10.1090/pspum/057/1335462}
 }
 
 @Book{		  cairoli.dalang:96:sequential,
@@ -8900,6 +8900,22 @@
 
 @Article{	  carmona.nualart:88:random,
   author	= {Carmona, Ren\'{e} and Nualart, David},
+  title		= {Random nonlinear wave equations: propagation of
+		  singularities},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {16},
+  year		= {1988},
+  number	= {2},
+  pages		= {730--751},
+  issn		= {0091-1798},
+  mrclass	= {60H15 (35L05 35R60)},
+  mrnumber	= {929075},
+  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
+}
+
+@Article{	  carmona.nualart:88:random*1,
+  author	= {Carmona, Ren\'{e} and Nualart, David},
   title		= {Random nonlinear wave equations: smoothness of the
 		  solutions},
   journal	= {Probab. Theory Related Fields},
@@ -8914,22 +8930,6 @@
   mrreviewer	= {M. Zakai},
   doi		= {10.1007/BF00318783},
   url		= {https://doi.org/10.1007/BF00318783}
-}
-
-@Article{	  carmona.nualart:88:random*1,
-  author	= {Carmona, Ren\'{e} and Nualart, David},
-  title		= {Random nonlinear wave equations: propagation of
-		  singularities},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {16},
-  year		= {1988},
-  number	= {2},
-  pages		= {730--751},
-  issn		= {0091-1798},
-  mrclass	= {60H15 (35L05 35R60)},
-  mrnumber	= {929075},
-  url		= {http://links.jstor.org/sici?sici=0091-1798(198804)16:2<730:RNWEPO>2.0.CO;2-D&origin=MSN}
 }
 
 @Book{		  carmona.nualart:90:nonlinear,
@@ -11015,7 +11015,7 @@
   author	= {Le Chen and Jingyu Huang},
   year		= {2022},
   month		= {August},
-  journal	= {Proc. Amer. Math. Soc. (pending revision)},
+  journal	= {Proc. Amer. Math. Soc. (in press)},
   fjournal	= {Proceedings of the American Mathematical Society},
   url		= {http://arXiv.org/abs/2208.03853}
 }
@@ -12965,6 +12965,17 @@
 }
 
 @InCollection{	  conus.joseph.ea:13:intermittency,
+  title		= {Intermittency and chaos for a nonlinear stochastic wave
+		  equation in dimension 1},
+  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
+		  and Shiu, Shang-Yuan},
+  booktitle	= {Malliavin calculus and stochastic analysis},
+  pages		= {251--279},
+  year		= {2013},
+  publisher	= {Springer}
+}
+
+@InCollection{	  conus.joseph.ea:13:intermittency*1,
   author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
 		  and Shiu, Shang-Yuan},
   title		= {Intermittency and chaos for a nonlinear stochastic wave
@@ -12980,17 +12991,6 @@
   mrreviewer	= {Stefan Tappe},
   doi		= {10.1007/978-1-4614-5906-4\_11},
   url		= {https://doi.org/10.1007/978-1-4614-5906-4_11}
-}
-
-@InCollection{	  conus.joseph.ea:13:intermittency*1,
-  title		= {Intermittency and chaos for a nonlinear stochastic wave
-		  equation in dimension 1},
-  author	= {Conus, Daniel and Joseph, Mathew and Khoshnevisan, Davar
-		  and Shiu, Shang-Yuan},
-  booktitle	= {Malliavin calculus and stochastic analysis},
-  pages		= {251--279},
-  year		= {2013},
-  publisher	= {Springer}
 }
 
 @Article{	  conus.joseph.ea:13:on,
@@ -16158,6 +16158,23 @@
 @Article{	  david.duplantier.ea:93:renormalization,
   author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
 		  Emmanuel},
+  title		= {Renormalization of crumpled manifolds},
+  journal	= {Phys. Rev. Lett.},
+  fjournal	= {Physical Review Letters},
+  volume	= {70},
+  year		= {1993},
+  number	= {15},
+  pages		= {2205--2208},
+  issn		= {0031-9007},
+  mrclass	= {82B41 (81T17 81T30 82B28)},
+  mrnumber	= {1214561},
+  doi		= {10.1103/PhysRevLett.70.2205},
+  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+
+@Article{	  david.duplantier.ea:93:renormalization*1,
+  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
+		  Emmanuel},
   title		= {Renormalization theory for interacting crumpled
 		  manifolds},
   journal	= {Nuclear Phys. B},
@@ -16173,23 +16190,6 @@
   mrnumber	= {1215176},
   doi		= {10.1016/0550-3213(93)90226-F},
   url		= {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-
-@Article{	  david.duplantier.ea:93:renormalization*1,
-  author	= {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter,
-		  Emmanuel},
-  title		= {Renormalization of crumpled manifolds},
-  journal	= {Phys. Rev. Lett.},
-  fjournal	= {Physical Review Letters},
-  volume	= {70},
-  year		= {1993},
-  number	= {15},
-  pages		= {2205--2208},
-  issn		= {0031-9007},
-  mrclass	= {82B41 (81T17 81T30 82B28)},
-  mrnumber	= {1214561},
-  doi		= {10.1103/PhysRevLett.70.2205},
-  url		= {https://doi.org/10.1103/PhysRevLett.70.2205}
 }
 
 @Article{	  david.duplantier.ea:94:renormalization,
@@ -18236,6 +18236,21 @@
 
 @Book{		  dunford.schwartz:88:linear,
   author	= {Dunford, Nelson and Schwartz, Jacob T.},
+  title		= {Linear operators. {P}art {I}},
+  series	= {Wiley Classics Library},
+  note		= {General theory, With the assistance of William G. Bade and
+		  Robert G. Bartle, Reprint of the 1958 original, A
+		  Wiley-Interscience Publication},
+  publisher	= {John Wiley \& Sons, Inc., New York},
+  year		= {1988},
+  pages		= {xiv+858},
+  isbn		= {0-471-60848-3},
+  mrclass	= {47-01 (46-01)},
+  mrnumber	= {1009162}
+}
+
+@Book{		  dunford.schwartz:88:linear*1,
+  author	= {Dunford, Nelson and Schwartz, Jacob T.},
   title		= {Linear operators. {P}art {II}},
   series	= {Wiley Classics Library},
   note		= {Spectral theory. Selfadjoint operators in Hilbert space,
@@ -18248,21 +18263,6 @@
   isbn		= {0-471-60847-5},
   mrclass	= {47-01 (46-01)},
   mrnumber	= {1009163}
-}
-
-@Book{		  dunford.schwartz:88:linear*1,
-  author	= {Dunford, Nelson and Schwartz, Jacob T.},
-  title		= {Linear operators. {P}art {I}},
-  series	= {Wiley Classics Library},
-  note		= {General theory, With the assistance of William G. Bade and
-		  Robert G. Bartle, Reprint of the 1958 original, A
-		  Wiley-Interscience Publication},
-  publisher	= {John Wiley \& Sons, Inc., New York},
-  year		= {1988},
-  pages		= {xiv+858},
-  isbn		= {0-471-60848-3},
-  mrclass	= {47-01 (46-01)},
-  mrnumber	= {1009162}
 }
 
 @Article{	  dunlap.gu.ea:20:fluctuations,
@@ -19629,20 +19629,6 @@
 @Book{		  erdelyi.magnus.ea:81:higher*1,
   author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
 		  Fritz and Tricomi, Francesco G.},
-  title		= {Higher transcendental functions. {V}ol. {II}},
-  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
-		  original},
-  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
-  year		= {1981},
-  pages		= {xviii+396},
-  isbn		= {0-89874-069-X},
-  mrclass	= {33-02 (01A75)},
-  mrnumber	= {698780}
-}
-
-@Book{		  erdelyi.magnus.ea:81:higher*2,
-  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
-		  Fritz and Tricomi, Francesco G.},
   title		= {Higher transcendental functions. {V}ol. {I}},
   note		= {Based on notes left by Harry Bateman, With a preface by
 		  Mina Rees, With a foreword by E. C. Watson, Reprint of the
@@ -19653,6 +19639,20 @@
   isbn		= {0-89874-069-X},
   mrclass	= {33-02 (01A75)},
   mrnumber	= {698779}
+}
+
+@Book{		  erdelyi.magnus.ea:81:higher*2,
+  author	= {Erd\'{e}lyi, Arthur and Magnus, Wilhelm and Oberhettinger,
+		  Fritz and Tricomi, Francesco G.},
+  title		= {Higher transcendental functions. {V}ol. {II}},
+  note		= {Based on notes left by Harry Bateman, Reprint of the 1953
+		  original},
+  publisher	= {Robert E. Krieger Publishing Co., Inc., Melbourne, Fla.},
+  year		= {1981},
+  pages		= {xviii+396},
+  isbn		= {0-89874-069-X},
+  mrclass	= {33-02 (01A75)},
+  mrnumber	= {698780}
 }
 
 @Book{		  erdelyi:56:asymptotic,
@@ -23293,6 +23293,24 @@
 @Article{	  giordano.jolis.ea:20:spdes,
   author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
 		  Llu\'{i}s},
+  title		= {S{PDE}s with linear multiplicative fractional noise:
+		  continuity in law with respect to the {H}urst index},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {130},
+  year		= {2020},
+  number	= {12},
+  pages		= {7396--7430},
+  issn		= {0304-4149},
+  mrclass	= {60B10 (60G22 60H07 60H15)},
+  mrnumber	= {4167210},
+  doi		= {10.1016/j.spa.2020.08.001},
+  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
+}
+
+@Article{	  giordano.jolis.ea:20:spdes*1,
+  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
+		  Llu\'{i}s},
   title		= {S{PDE}s with fractional noise in space: continuity in law
 		  with respect to the {H}urst index},
   journal	= {Bernoulli},
@@ -23308,24 +23326,6 @@
   mrreviewer	= {Xiliang Fan},
   doi		= {10.3150/19-BEJ1128},
   url		= {https://doi.org/10.3150/19-BEJ1128}
-}
-
-@Article{	  giordano.jolis.ea:20:spdes*1,
-  author	= {Giordano, Luca M. and Jolis, Maria and Quer-Sardanyons,
-		  Llu\'{i}s},
-  title		= {S{PDE}s with linear multiplicative fractional noise:
-		  continuity in law with respect to the {H}urst index},
-  journal	= {Stochastic Process. Appl.},
-  fjournal	= {Stochastic Processes and their Applications},
-  volume	= {130},
-  year		= {2020},
-  number	= {12},
-  pages		= {7396--7430},
-  issn		= {0304-4149},
-  mrclass	= {60B10 (60G22 60H07 60H15)},
-  mrnumber	= {4167210},
-  doi		= {10.1016/j.spa.2020.08.001},
-  url		= {https://doi.org/10.1016/j.spa.2020.08.001}
 }
 
 @Article{	  giunti.gu.ea:19:heat,
@@ -26275,25 +26275,7 @@
   url		= {http://links.jstor.org/sici?sici=0162-1459(199406)89:426<368:AATSSM>2.0.CO;2-Z&origin=MSN}
 }
 
-@Article{	  hara.slade:00:scaling,
-  author	= {Hara, Takashi and Slade, Gordon},
-  title		= {The scaling limit of the incipient infinite cluster in
-		  high-dimensional percolation. {I}. {C}ritical exponents},
-  journal	= {J. Statist. Phys.},
-  fjournal	= {Journal of Statistical Physics},
-  volume	= {99},
-  year		= {2000},
-  number	= {5-6},
-  pages		= {1075--1168},
-  issn		= {0022-4715},
-  mrclass	= {82B43 (60K35)},
-  mrnumber	= {1773141},
-  mrreviewer	= {Remco van der Hofstad},
-  doi		= {10.1023/A:1018628503898},
-  url		= {https://doi.org/10.1023/A:1018628503898}
-}
-
-@InCollection{	  hara.slade:00:scaling*1,
+@InCollection{	  hara.slade:00:scaling,
   author	= {Hara, Takashi and Slade, Gordon},
   title		= {The scaling limit of the incipient infinite cluster in
 		  high-dimensional percolation. {II}. {I}ntegrated
@@ -26312,6 +26294,24 @@
   mrreviewer	= {Remco van der Hofstad},
   doi		= {10.1063/1.533186},
   url		= {https://doi.org/10.1063/1.533186}
+}
+
+@Article{	  hara.slade:00:scaling*1,
+  author	= {Hara, Takashi and Slade, Gordon},
+  title		= {The scaling limit of the incipient infinite cluster in
+		  high-dimensional percolation. {I}. {C}ritical exponents},
+  journal	= {J. Statist. Phys.},
+  fjournal	= {Journal of Statistical Physics},
+  volume	= {99},
+  year		= {2000},
+  number	= {5-6},
+  pages		= {1075--1168},
+  issn		= {0022-4715},
+  mrclass	= {82B43 (60K35)},
+  mrnumber	= {1773141},
+  mrreviewer	= {Remco van der Hofstad},
+  doi		= {10.1023/A:1018628503898},
+  url		= {https://doi.org/10.1023/A:1018628503898}
 }
 
 @Article{	  hara.slade:91:critical,
@@ -40219,21 +40219,7 @@
   url		= {https://doi.org/10.1016/j.spa.2005.10.007}
 }
 
-@Book{		  nane:06:iterated*1,
-  author	= {Nane, Erkan},
-  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
-		  isoperimetric-type inequalities},
-  note		= {Thesis (Ph.D.)--Purdue University},
-  publisher	= {ProQuest LLC, Ann Arbor, MI},
-  year		= {2006},
-  pages		= {47},
-  isbn		= {978-0542-86606-7},
-  mrclass	= {Thesis},
-  mrnumber	= {2709290},
-  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
-}
-
-@Article{	  nane:06:iterated*2,
+@Article{	  nane:06:iterated*1,
   author	= {Nane, Erkan},
   title		= {Iterated {B}rownian motion in parabola-shaped domains},
   journal	= {Potential Anal.},
@@ -40250,6 +40236,20 @@
   mrreviewer	= {Endre Cs\'{a}ki},
   doi		= {10.1007/s11118-005-2611-9},
   url		= {https://doi.org/10.1007/s11118-005-2611-9}
+}
+
+@Book{		  nane:06:iterated*2,
+  author	= {Nane, Erkan},
+  title		= {Iterated {B}rownian motion: {L}ifetime asymptotics and
+		  isoperimetric-type inequalities},
+  note		= {Thesis (Ph.D.)--Purdue University},
+  publisher	= {ProQuest LLC, Ann Arbor, MI},
+  year		= {2006},
+  pages		= {47},
+  isbn		= {978-0542-86606-7},
+  mrclass	= {Thesis},
+  mrnumber	= {2709290},
+  url		= {http://gateway.proquest.com/openurl?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:dissertation&res_dat=xri:pqdiss&rft_dat=xri:pqdiss:3232219}
 }
 
 @Article{	  nane:06:laws,
@@ -41243,6 +41243,23 @@
 
 @Article{	  nourdin.peccati:09:steins,
   author	= {Nourdin, Ivan and Peccati, Giovanni},
+  title		= {Stein's method on {W}iener chaos},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {145},
+  year		= {2009},
+  number	= {1-2},
+  pages		= {75--118},
+  issn		= {0178-8051},
+  mrclass	= {60F05 (60G05 60H07)},
+  mrnumber	= {2520122},
+  mrreviewer	= {Anthony R\'{e}veillac},
+  doi		= {10.1007/s00440-008-0162-x},
+  url		= {https://doi.org/10.1007/s00440-008-0162-x}
+}
+
+@Article{	  nourdin.peccati:09:steins*1,
+  author	= {Nourdin, Ivan and Peccati, Giovanni},
   title		= {Stein's method and exact {B}erry-{E}sseen asymptotics for
 		  functionals of {G}aussian fields},
   journal	= {Ann. Probab.},
@@ -41257,23 +41274,6 @@
   mrreviewer	= {Jean-Pierre Fouque},
   doi		= {10.1214/09-AOP461},
   url		= {https://doi.org/10.1214/09-AOP461}
-}
-
-@Article{	  nourdin.peccati:09:steins*1,
-  author	= {Nourdin, Ivan and Peccati, Giovanni},
-  title		= {Stein's method on {W}iener chaos},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {145},
-  year		= {2009},
-  number	= {1-2},
-  pages		= {75--118},
-  issn		= {0178-8051},
-  mrclass	= {60F05 (60G05 60H07)},
-  mrnumber	= {2520122},
-  mrreviewer	= {Anthony R\'{e}veillac},
-  doi		= {10.1007/s00440-008-0162-x},
-  url		= {https://doi.org/10.1007/s00440-008-0162-x}
 }
 
 @Article{	  nourdin.peccati:10:cumulants,
@@ -41543,24 +41543,6 @@
 
 @Article{	  nourdin.simon:06:on,
   author	= {Nourdin, Ivan and Simon, Thomas},
-  title		= {On the absolute continuity of {L}\'{e}vy processes with
-		  drift},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {34},
-  year		= {2006},
-  number	= {3},
-  pages		= {1035--1051},
-  issn		= {0091-1798},
-  mrclass	= {60G51 (60H10)},
-  mrnumber	= {2243878},
-  mrreviewer	= {Tina M. Marquardt},
-  doi		= {10.1214/009117905000000620},
-  url		= {https://doi.org/10.1214/009117905000000620}
-}
-
-@Article{	  nourdin.simon:06:on*1,
-  author	= {Nourdin, Ivan and Simon, Thomas},
   title		= {On the absolute continuity of one-dimensional {SDE}s
 		  driven by a fractional {B}rownian motion},
   journal	= {Statist. Probab. Lett.},
@@ -41575,6 +41557,24 @@
   mrreviewer	= {Andreas Neuenkirch},
   doi		= {10.1016/j.spl.2005.10.021},
   url		= {https://doi.org/10.1016/j.spl.2005.10.021}
+}
+
+@Article{	  nourdin.simon:06:on*1,
+  author	= {Nourdin, Ivan and Simon, Thomas},
+  title		= {On the absolute continuity of {L}\'{e}vy processes with
+		  drift},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {34},
+  year		= {2006},
+  number	= {3},
+  pages		= {1035--1051},
+  issn		= {0091-1798},
+  mrclass	= {60G51 (60H10)},
+  mrnumber	= {2243878},
+  mrreviewer	= {Tina M. Marquardt},
+  doi		= {10.1214/009117905000000620},
+  url		= {https://doi.org/10.1214/009117905000000620}
 }
 
 @Article{	  nourdin.simon:07:correcting,
@@ -45267,7 +45267,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -45283,21 +45298,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  peszat.tindel:10:stochastic,
@@ -49176,24 +49176,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {I}. {P}arametrized
-		  independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {96},
-  year		= {1993},
-  number	= {2},
-  pages		= {241--260},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1227034},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01192135},
-  url		= {https://doi.org/10.1007/BF01192135}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {II}.
 		  {N}onstationary independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -49208,6 +49190,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01199314},
   url		= {https://doi.org/10.1007/BF01199314}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {I}. {P}arametrized
+		  independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {96},
+  year		= {1993},
+  number	= {2},
+  pages		= {241--260},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1227034},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01192135},
+  url		= {https://doi.org/10.1007/BF01192135}
 }
 
 @Article{	  seppalainen:94:large,
@@ -51886,6 +51886,23 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -51900,23 +51917,6 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
